Depending on dimitrikourk glew

--- a/biicode.conf
+++ b/biicode.conf
@@ -1,7 +1,7 @@
 [requirements]
 	 biicode/cmake: 3
 	 diego/glfw: 1
-         lasote/glew: 0
+         dimitrikourk/glew: 2 
 
 [parent]
 	lasote/nanovg: 0
@@ -21,5 +21,5 @@
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
     GLFW/glfw3.h: diego/glfw/include
-    GL/glew.h: lasote/glew/include
+    GL/glew.h: dimitrikourk/glew/include
 
