--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -107,6 +107,5 @@ if (MSVC)
         set_property(TARGET example-gl3 PROPERTY OUTPUT_NAME ${EXE_NAME}-gl3)
         set_property(TARGET example-vk PROPERTY OUTPUT_NAME ${EXE_NAME}-vk)
     endif()
-    set_property(TARGET example-vk example-gl3 PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
-    set_property(TARGET example-vk example-gl3 PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}$<0:...>)
+    set_property(TARGET example-vk example-gl3 PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<0:...>)
 endif()
