Update examples cmake

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,9 +2,6 @@ cmake_minimum_required(VERSION 3.1)
 
 project(nanovg_example)
 
-
-set(CMAKE_VERBOSE_MAKEFILE ON)
-
 set (BUILD_SHARED_LIBS OFF)
 set( GLFW_BUILD_DOCS OFF CACHE BOOL ""  )
 set( GLFW_BUILD_TESTS OFF CACHE BOOL ""  )
@@ -35,8 +32,8 @@ set(COMMON_SRC
     ../src/stb_image.h
     ../src/stb_truetype.h
     ../src/nanovg.c
-    ../example/demo.c
-    ../example/perf.c
+    demo.c
+    perf.c
 )
 
 
@@ -54,15 +51,13 @@ if (BUILD_EXAMPLE_VULKAN)
         example-vk
         ${COMMON_SRC}
         ../src/nanovg_vk.h
-        ../example/example_vulkan.c
-        ../example/vulkan_util.h
+        example_vulkan.c
+        vulkan_util.h
     )
 
-    target_include_directories(example-vk PRIVATE ../src)
     target_include_directories(example-vk PRIVATE ${Vulkan_INCLUDE_DIR})
     target_compile_definitions(example-vk PRIVATE NANOVG_VULKAN_IMPLEMENTATION)
     target_link_libraries(example-vk PRIVATE glfw ${Vulkan_LIBRARY})
-
 endif() 
 
 if (BUILD_EXAMPLE_GL3)
@@ -73,9 +68,9 @@ if (BUILD_USE_GLAD)
         ../src/nanovg_gl.h
         ../src/nanovg_gl_utils.h
         ../glad-3.2-compat/src/glad.c
-        ../example/example_gl3.c
+        example_gl3.c
     )
-    target_include_directories(example-gl3 PRIVATE ../src ../glad-3.2-compat/include)
+    target_include_directories(example-gl3 PRIVATE ../glad-3.2-compat/include)
     target_compile_definitions(example-gl3 PRIVATE NANOVG_GLAD)
     target_link_libraries(example-gl3 PRIVATE glfw)
 else()
@@ -83,15 +78,15 @@ else()
     set( ONLY_LIBS ON CACHE BOOL ""  )
     set( glew-cmake_BUILD_SHARED OFF CACHE BOOL ""  )
     set( glew-cmake_BUILD_STATIC ON CACHE BOOL ""  )
-    add_subdirectory(../glew-cmake glew)
+    add_subdirectory(glew-cmake glew)
     add_executable(
         example-gl3
         ${COMMON_SRC}
         ../src/nanovg_gl.h
         ../src/nanovg_gl_utils.h
-        ../example/example_gl3.c
+        example_gl3.c
     )
-    target_include_directories(example-gl3 PRIVATE ../src)
+    target_include_directories(example-gl3 PRIVATE src)
     target_compile_definitions(example-gl3 PRIVATE NANOVG_GLEW)
     target_link_libraries(example-gl3 PRIVATE glfw libglew_static)
 endif()
@@ -100,10 +95,17 @@ endif()
 
 
 if (MSVC) 
-    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
-    if (DEFINED EXE_NAME)
-        set_property(TARGET example-gl3 PROPERTY OUTPUT_NAME ${EXE_NAME}-gl3)
-        set_property(TARGET example-vk PROPERTY OUTPUT_NAME ${EXE_NAME}-vk)
-    endif()
+    add_compile_definitions(_CRT_SECURE_NO_WARNINGS )
+    set_source_files_properties(
+        example_vulkan.c
+        example_gl3.c
+        demo.c 
+        PROPERTIES COMPILE_FLAGS 
+        /wd4244
+    )
+
+    set(BUILD_EXE_POSTFIX "-$<LOWER_CASE:${CMAKE_CXX_COMPILER_ID}-$<CONFIG>>" CACHE STRING "Append to executable name")
+    set_property(TARGET example-gl3 PROPERTY OUTPUT_NAME example-gl3${BUILD_EXE_POSTFIX})
+    set_property(TARGET example-vk PROPERTY OUTPUT_NAME example-vk${BUILD_EXE_POSTFIX})
     set_property(TARGET example-vk example-gl3 PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<0:...>)
 endif()
